--- a/Q Project/Content page.html
+++ b/Q Project/Content page.html
@@ -43,7 +43,7 @@
 			<img class="logo" src="Logo.jpeg">
 			<h1 class="hn"> AG Fictions </h1>
 			<a class="more" href=""> More </a>
-			<a class="home" href=""> Home </a>			
+			<a class="home" href="https://011420151405202005.github.io/Quarter-Project/Q%20Project/Homepage.html"> Home </a>			
 		</div>
 		
 		<div id="characters">
@@ -132,7 +132,7 @@ She was born in 2128 and like all nightbloods, she was sent to Polis at age 5. S
 		
 		<div id="one">
 			<center>
-			<a class="h" href=""> Home </a>
+			<a class="h" href="https://011420151405202005.github.io/Quarter-Project/Q%20Project/Homepage.html"> Home </a>
 			<a class="yy1" href=""> 2140-2144 </a>
 			<a class="yy2" href=""> 2145-2147 </a>
 			<a class="yy3" href=""> 2148-2149 </a>
