--- a/Q Project/Homepage.html
+++ b/Q Project/Homepage.html
@@ -49,7 +49,7 @@
 				<img class="logo" src="Logo.jpeg">
 				<h1 class="hn"> AG Fictions </h1>
 				<a class="more" href=""> More </a>
-				<a class="home" href=""> Home </a>			
+				<a class="home" href="https://011420151405202005.github.io/Quarter-Project/Q%20Project/Homepage.html"> Home </a>			
 			</div>
 			
 			<div id="mpcontent">
@@ -64,7 +64,7 @@
 			<div id="links">
 				<div class="link1">
 					<center>
-					<a href=""> <img class="mp" src="https://64.media.tumblr.com/512799aba0a71b923da6106f5ba7a7dc/tumblr_oyiabmOTBs1r1guvio1_250.gif" height="160px" width="160px"> </a>
+					<a href="https://011420151405202005.github.io/Quarter-Project/Q%20Project/Content%20page.html"> <img class="mp" src="https://64.media.tumblr.com/512799aba0a71b923da6106f5ba7a7dc/tumblr_oyiabmOTBs1r1guvio1_250.gif" height="160px" width="160px"> </a>
 					<p> Characters </p>
 					</center>
 				</div>
